--- a/simple-todos.html
+++ b/simple-todos.html
@@ -6,9 +6,17 @@
   <div class="container">
     <header>
       <h1>Todo List</h1>
-    <form class="new-task">
-      <input type="text" placeholder="Add a task" />
-    </form>
+      <label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+      </label>
+      {{> loginButtons}}
+      {{#if currentUser}}
+      <form class="new-task">
+        <input type="text" name="text" placeholder="Add a task" />
+      </form>
+      {{/if}}
+
     </header>
 
     <ul>
@@ -23,6 +31,6 @@
   <li class="{{#if checked}}checked{{/if}}">
     <button class="delete">&times;</button>
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-    <span class="text">{{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
